# purestat

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Caddyfile.prod  Cargo.toml  Dockerfile  Dockerfile.ui  Dockerfile.ui.k8s  LICENSE  README.md  docker-compose.full.yml  docker-compose.prod.yml  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  main.rs  state.rs
crates/api/src/extractors/: auth.rs
crates/api/src/middleware/: mod.rs
crates/api/src/routes/: api_key.rs  auth.rs  event.rs  export.rs  goal.rs  invite.rs  member.rs  mod.rs  oauth.rs  org.rs  realtime.rs  site.rs  stats.rs  stripe.rs
crates/config/: Cargo.toml
crates/config/src/: settings.rs
crates/db/: Cargo.toml
crates/db/src/: indexes.rs  lib.rs
crates/db/src/clickhouse/: connection.rs
crates/db/src/clickhouse/schemas/: event.rs  session.rs
crates/db/src/mongo/: connection.rs
crates/db/src/mongo/models/: api_key.rs  goal.rs  invite.rs  mod.rs  org.rs  org_member.rs  site.rs  user.rs
crates/services/: Cargo.toml
crates/services/src/: email.rs  lib.rs
crates/services/src/analytics/: geo.rs  ingest.rs  mod.rs  privacy.rs  query.rs  realtime.rs  session.rs
crates/services/src/auth/: mod.rs
crates/services/src/dao/: activation_code.rs  api_key.rs  base.rs  goal.rs  invite.rs  mod.rs  org.rs  org_member.rs  site.rs  user.rs
crates/services/src/export/: mod.rs
crates/services/src/stripe/: mod.rs
crates/tests/: Cargo.toml
crates/tests/src/: api_key_test.rs  auth_test.rs  event_test.rs  goal_test.rs  helpers.rs  invite_test.rs  lib.rs  member_test.rs  org_test.rs  site_test.rs  stats_test.rs  stripe_test.rs
crates/tracker/: Cargo.toml
crates/tracker/src/: lib.rs  main.rs
docs/: api.md  architecture.md  data-model.md  deployment.md  testing.md  tracker.md  ui.md  use-cases.md
e2e/: package.json  playwright.config.ts  playwright.prod.config.ts  playwright.video.config.ts
e2e/tests/: api-keys.spec.ts  auth.spec.ts  billing.spec.ts  dashboard.spec.ts  goals.spec.ts  helpers.ts  members.spec.ts  org.spec.ts  site.spec.ts
e2e/video/: record-intro.spec.ts  transcriptions.json
scripts/: clickhouse-init.sql  geoip-download.sh  record-video.sh  test.sh
tracker-js/: package.json  rollup.config.js  tsconfig.json
tracker-js/src/: purestat.ts
ui/: index.html  package.json  vite.config.ts
ui/src/: App.vue  main.ts
ui/src/components/dashboard/: DatePicker.vue  DevicesTable.vue  FilterBar.vue  GoalsTable.vue  LocationsMap.vue  MetricCards.vue  PagesTable.vue  RealtimeBadge.vue  SourcesTable.vue  TopChart.vue
ui/src/components/layout/: AppBar.vue  Sidebar.vue
ui/src/composables/: useCharts.ts  useHttpClient.ts  useWebSocket.ts
ui/src/locales/: en.json
ui/src/plugins/: i18n.ts  vuetify.ts
ui/src/router/: index.ts
ui/src/stores/: app.ts  billing.ts  goals.ts  org.ts  realtime.ts  site.ts  stats.ts
ui/src/views/: ApiKeys.vue  Billing.vue  Dashboard.vue  Goals.vue  InviteAccept.vue  Landing.vue  Login.vue  Members.vue  OrgList.vue  OrgSettings.vue  Register.vue  SiteSettings.vue  Sites.vue  UserSettings.vue
ui/src/views/legal/: PrivacyPolicy.vue  Terms.vue
