[package]
name = "purestat-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "purestat-api"
path = "src/main.rs"

[dependencies]
purestat-config = { path = "../config" }
purestat-db = { path = "../db" }
purestat-services = { path = "../services" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bson.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
validator.workspace = true
urlencoding.workspace = true
redis.workspace = true
reqwest.workspace = true
nanoid.workspace = true
sha2.workspace = true
hex.workspace = true
hmac.workspace = true
time = "0.3"
url = "2"
mongodb.workspace = true
clickhouse.workspace = true
