[package]
name = "purestat-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
purestat-config = { path = "../config" }
purestat-db = { path = "../db" }
mongodb.workspace = true
bson.workspace = true
clickhouse.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
password-hash.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
rand.workspace = true
nanoid.workspace = true
redis.workspace = true
reqwest.workspace = true
validator.workspace = true
anyhow.workspace = true
futures.workspace = true
maxminddb.workspace = true
time = "0.3"
